--- a/about.html
+++ b/about.html
@@ -2,10 +2,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ed's Webpage</title>
+    <title>About</title>
 </head>
 <body>
-    <h1>Hello world!</h1>
+    <h1>About me!</h1>
 
     <nav>
         <ul>
