--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <nav>
         <ul>
-            <li><a href="html/about.html">About</a></li>
+            <li><a href="about.html">About</a></li>
         </ul>
     </nav>
 
