--- a/index.html
+++ b/index.html
@@ -5,13 +5,16 @@
     <title>Ed's Webpage</title>
 </head>
 <body>
-    <h1>Hello world!</h1>
+    <h1>Welcome to Ed Louie's website!</h1>
 
     <nav>
         <ul>
             <li><a href="about.html">About</a></li>
+            <li><a href="projects.html">Projects</a></li>
+            <li><a href="skills.html">Skill Sets</a></li>
         </ul>
     </nav>
+
 
 
 
