Created links to other pages

--- a/about.html
+++ b/about.html
@@ -9,7 +9,9 @@
 
     <nav>
         <ul>
-            <li><a href="html/about.html">About</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="projects.html">Projects</a></li>
+            <li><a href="skills.html">Skill Sets</a></li>
         </ul>
     </nav>
 
