--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
         </ul>
     </nav>
 
-
+    <!--Introduction-->
+    <h3>Who is Ed Louie?</h3>
+    <p>As you can tell, my name is Ed Louie.  I am currently a senior Managment Information Systems student at the University of Oklahoma.
+       I will be graduating in May of 2021 with my bachelors degree.</p>
 
 
 </body>
