Style sheet update

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ed's Webpage</title>
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="stylesheets/style.css">
 </head>
 <body>
     <h1>Welcome to Ed Louie's website!</h1>
@@ -17,10 +17,13 @@
     </nav>
 
     <!--Introduction-->
-    <h3>Who is Ed Louie?</h3>
-    <p>As you can tell, my name is Ed Louie.  I am currently a senior Managment Information Systems student at the University of Oklahoma.
-       I will be graduating in May of 2021 with my bachelors degree.</p>
-
+    <div id="me">
+        <h2>Who is Ed Louie?</h2>
+        <p>
+            I am currently a senior Managment Information Systems student at the University of Oklahoma.
+            I will be graduating in May of 2021 with my bachelors degree.
+        </p>
+    </div>
 
 </body>
 
