Updated skills page

--- a/skills.html
+++ b/skills.html
@@ -15,6 +15,21 @@
         </ul>
     </nav>
 
+    <div id="skills">
+        <!--List of skills: programming languages, certifications, etc.-->
+        <p>Experience with:</p>
+        <ul>
+            <li>SQL</li>
+            <li>C#</li>
+            <li>HTML & CSS</li>
+        </ul>
+
+        <p>Certifications:</p>
+        <ul>
+            <li>Lean Six Sigma Green Belt</li>
+        </ul>
+    </div>
+
 
 
 </body>
