--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 <body>
     <h1>Welcome to Ed Louie's website!</h1>
 
+    <!--OU logo-->
+    <image style="height:300px" src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.logolynx.com%2Ftopic%2Funiversity%2Bof%2Boklahoma&psig=AOvVaw29vA4i2vtbedWuU4cfhrKK&ust=1619235124747000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCOjUs4i3k_ACFQAAAAAdAAAAABAD"></image>
+
     <nav>
         <ul>
             <li><a href="about.html">About</a></li>
