Updated Style sheet, updated home page

--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ed's Webpage</title>
-    <link rel="stylesheet" type="text/css" href="stylesheets/style.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
     <h1>Welcome to Ed Louie's website!</h1>
 
     <!--OU logo-->
-    <image style="height:300px" src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.logolynx.com%2Ftopic%2Funiversity%2Bof%2Boklahoma&psig=AOvVaw29vA4i2vtbedWuU4cfhrKK&ust=1619235124747000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCOjUs4i3k_ACFQAAAAAdAAAAABAD"></image>
+    <image style="height:300px" src="<a href="https://www.pngkey.com/detail/u2t4u2q8i1i1u2u2_oklahoma-sooners-logo-university-of-oklahoma-logo-printables/" target="_blank"></a></image>
 
     <nav>
         <ul>
