--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1>Welcome to Ed Louie's website!</h1>
 
     <!--OU logo-->
-    <image style="height:300px" src="<a href="https://www.pngkey.com/detail/u2t4u2q8i1i1u2u2_oklahoma-sooners-logo-university-of-oklahoma-logo-printables/" target="_blank"></a></image>
+    <image style="height:300px" src="<https://www.pngkey.com/detail/u2t4u2q8i1i1u2u2_oklahoma-sooners-logo-university-of-oklahoma-logo-printables/" target="_blank"></a></image>
 
     <nav>
         <ul>
