--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1>Welcome to Ed Louie's website!</h1>
 
     <!--OU logo-->
-    <image style="height:300px" src="<https://www.pngkey.com/detail/u2t4u2q8i1i1u2u2_oklahoma-sooners-logo-university-of-oklahoma-logo-printables/" target="_blank"></a></image>
+    <image style="height:300px" src="<https://www.google.com/url?sa=i&url=https%3A%2F%2Fen.wikipedia.org%2Fwiki%2FFile%3AOklahoma_Sooners_logo.svg&psig=AOvVaw3ZliphZZbY5M0ivY5oKGv6&ust=1619236207282000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCOjTtom7k_ACFQAAAAAdAAAAABAD"></image>
 
     <nav>
         <ul>
