--- a/index.html
+++ b/index.html
@@ -2,14 +2,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ed's Webpage</title>
+    <title>Ed Louie's Webpage</title>
     <link rel="stylesheet" href="Style.css">
 </head>
 <body>
-    <h1>Welcome to Ed Louie's website!</h1>
-
-    <!--OU logo-->
-    <image style="height:300px" src="<https://www.google.com/url?sa=i&url=https%3A%2F%2Fen.wikipedia.org%2Fwiki%2FFile%3AOklahoma_Sooners_logo.svg&psig=AOvVaw3ZliphZZbY5M0ivY5oKGv6&ust=1619236207282000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCOjTtom7k_ACFQAAAAAdAAAAABAD"></image>
+    <h1>Welcome to Ed Louie's website!</h1>    
 
     <nav>
         <ul>
