Updated home page

--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
-<html lang="en">
+﻿<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ed Louie's Webpage</title>
     <link rel="stylesheet" href="Style.css">
+    <!--Home page-->
 </head>
 <body>
     <h1>Welcome to Ed Louie's website!</h1>    
@@ -17,7 +18,7 @@
     </nav>
 
     <!--Introduction-->
-    <div id="me">
+    <div id="me" style="color:floralwhite">
         <h2>Who is Ed Louie?</h2>
         <p>
             I am currently a senior Managment Information Systems student at the University of Oklahoma.
