Updated Projects tab

--- a/projects.html
+++ b/projects.html
@@ -1,8 +1,9 @@
-<html lang="en">
+﻿<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About</title>
+    <link rel="stylesheet" href="Style.css">
 </head>
 <body>
     <h1>Projects</h1>
@@ -15,6 +16,10 @@
         </ul>
     </nav>
 
+    <h2>Project Portfolio</h2>
+    <div id="project">
+
+    </div>
 
 
 
