--- a/skills.html
+++ b/skills.html
@@ -1,8 +1,9 @@
-<html lang="en">
+﻿<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About</title>
+    <link rel="stylesheet" href="Style.css">
 </head>
 <body>
     <h1>Skill Set</h1>
