--- a/index.html
+++ b/index.html
@@ -9,16 +9,18 @@
 <body>
     <h1>Welcome to Ed Louie's website!</h1>    
 
-    <nav>
-        <ul>
-            <li><a href="about.html">About</a></li>
-            <li><a href="projects.html">Projects</a></li>
-            <li><a href="skills.html">Skill Sets</a></li>
-        </ul>
-    </nav>
+    <div class="links">
+        <nav>
+            <ul>
+                <li><a href="about.html">About</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="skills.html">Skill Sets</a></li>
+            </ul>
+        </nav>
+    </div>
 
     <!--Introduction-->
-    <div id="me" style="color:floralwhite">
+    <div class="me">
         <h2>Who is Ed Louie?</h2>
         <p>
             I am currently a senior Managment Information Systems student at the University of Oklahoma.
