Created separate style sheets

--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About</title>
-    <link rel="stylesheet" href="Style.css">
+    <link rel="stylesheet" href="aboutstyle.css">
 </head>
 <body>
     <h1>About me!</h1>
@@ -16,7 +16,12 @@
         </ul>
     </nav>
 
-
+    <div>
+        <p>
+            I am a senior Management Information Systems student at the University of Oklahoma.  I am an avid technology enthusiast and have a hobby of building computers
+            and mechanical keyboards.  I have also played the tenor trombone since the fifth grade, and have participated in various marching bands, concert bands, and jazz bands.
+        </p>
+    </div>
 
 </body>
 
