--- a/skills.html
+++ b/skills.html
@@ -23,6 +23,7 @@
             <li>SQL</li>
             <li>C#</li>
             <li>HTML & CSS</li>
+            <li>Microsoft Office Suite</li>
         </ul>
 
         <p>Certifications:</p>
