--- a/projects.html
+++ b/projects.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="Style.css">
 </head>
 <body>
-    <h1>Projects</h1>
+    <h1>Project Portfolio</h1>
 
     <nav>
         <ul>
@@ -16,9 +16,11 @@
         </ul>
     </nav>
 
-    <h2>Project Portfolio</h2>
-    <div id="project">
-
+    <div class="card">
+        <div class="container">
+            <img src="https://www.ouhealth.com/cms/thumbnails/00/830x415//images/locations/The-Children-s-Hospital-Sooner-Pediatrics.jpg" alt="Avatar" style="width:100%">
+            <h4><b>Lean Six Sigma Green Belt Project</b></h4>
+        </div>
     </div>
 
 
