--- a/projects.html
+++ b/projects.html
@@ -23,6 +23,12 @@
         </div>
     </div>
 
+    <div class="card">
+        <div class="container">
+            <p>Our group refromed and streamlined the set-up and clean-up process for a quarterly Neonatal Resuscitataion Program hosted by the Oklahoma Children's Hospital.</p>            
+        </div>
+    </div>
+
 
 
 </body>
