Updated project page

--- a/projects.html
+++ b/projects.html
@@ -20,16 +20,9 @@
         <div class="container">
             <img src="https://www.ouhealth.com/cms/thumbnails/00/830x415//images/locations/The-Children-s-Hospital-Sooner-Pediatrics.jpg" alt="Avatar" style="width:100%">
             <h4><b>Lean Six Sigma Green Belt Project</b></h4>
+            <h4><b>Our group refromed and streamlined the set-up and clean-up process for a quarterly Neonatal Resuscitataion Program hosted by the Oklahoma Children's Hospital.</b></h4>
         </div>
-    </div>
-
-    <div class="card">
-        <div class="container">
-            <p>Our group refromed and streamlined the set-up and clean-up process for a quarterly Neonatal Resuscitataion Program hosted by the Oklahoma Children's Hospital.</p>            
-        </div>
-    </div>
-
-
+    </div>     
 
 </body>
 
