--- a/index.html
+++ b/index.html
@@ -12,9 +12,8 @@
 
     <div class="card">
         <img src="https://www.aacsb.edu/-/media/aacsb/images/school-logos/innovations/univ-oklahoma.ashx?h=350&w=350&la=en&hash=B24D6C3B98A4C69A003041CBCA1D0F2F89640668" alt="Avatar" style="width:100%">
-        <div class="container">
-            <h4><b>Ed Louie</b></h4>
-            <p>Senior MIS Student</p>
+        <div class="container">      
+            <h4><b>Senior MIS Student</b></h4>            
         </div>
     </div>
 
