--- a/about.html
+++ b/about.html
@@ -16,11 +16,9 @@
         </ul>
     </nav>
 
-    <div>
-        <p>
-            I am a senior Management Information Systems student at the University of Oklahoma.  I am an avid technology enthusiast and have a hobby of building computers
-            and mechanical keyboards.  I have also played the tenor trombone since the fifth grade, and have participated in various marching bands, concert bands, and jazz bands.
-        </p>
+    <div class="card">
+        I am a senior Management Information Systems student at the University of Oklahoma.  I am an avid technology enthusiast and have a hobby of building computers
+        and mechanical keyboards.  I have also played the tenor trombone since the fifth grade, and have participated in various marching bands, concert bands, and jazz bands.
     </div>
 
 </body>
