Updated home page and about page

--- a/index.html
+++ b/index.html
@@ -23,23 +23,21 @@
         </div>
     </div>
 
+    <div class="card">
+        <h2>Who is Ed Louie?</h2>
+        <p>
+            I am currently a senior Managment Information Systems student at the University of Oklahoma.
+            I will be graduating in May of 2021 with my bachelors degree.
+        </p>
+    </div>
+
     <nav>
         <ul>
             <li><a href="about.html">About</a></li>
             <li><a href="projects.html">Projects</a></li>
             <li><a href="skills.html">Skill Sets</a></li>
         </ul>
-    </nav>
-
-
-    <!--Introduction-->
-
-    <h2>Who is Ed Louie?</h2>
-    <p>
-        I am currently a senior Managment Information Systems student at the University of Oklahoma.
-        I will be graduating in May of 2021 with my bachelors degree.
-    </p>
-
+    </nav>  
 
 </body>
 
